--- a/P3_Patrouillault_eric/sass/style.scss
+++ b/P3_Patrouillault_eric/sass/style.scss
@@ -6,9 +6,11 @@
 @import "./layout/header";
 
 @import "./components/btn";
+@import "./components/img";
 @import "./components/input";
+@import "./components/list";
 
-@import "./pages/index"
+@import "./pages/index";
 
 
 
