--- a/P3_Patrouillault_eric/sass/style.css
+++ b/P3_Patrouillault_eric/sass/style.css
@@ -4,6 +4,7 @@
           box-sizing: border-box;
   margin: 0;
   font-size: 16px;
+  text-decoration: none;
 }
 
 p, button {
@@ -19,6 +20,11 @@ h1 {
   margin-bottom: 20px;
 }
 
+h2 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
 /*senary-septenary*/
 .header__logo {
   display: -webkit-box;
@@ -30,18 +36,56 @@ h1 {
   margin: 20px 0 15px 0;
 }
 
-.search__btn {
+.btn {
   border: 0;
-  padding: 12px 24px;
-  font-size: 1.1rem;
-  border-radius: 100px;
-  color: #fff;
-  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
-  background: linear-gradient(#FF79DA, #9356DC);
-  cursor: pointer;
   -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
           box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
+}
+
+.search__btn {
+  background: -webkit-gradient(linear, left top, left bottom, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(#FF79DA, #9356DC);
+  border-radius: 100px;
+  height: 50px;
   margin: 30px 0 0 0;
+  padding: 12px 24px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.search__btn:hover {
+  background: -webkit-gradient(linear, left top, left bottom, from(#9356DC), to(#FF79DA));
+  background: linear-gradient(#9356DC, #FF79DA);
+}
+
+.functionning__btn {
+  background-color: #F2F2F2;
+  border-radius: 20px;
+  height: 75px;
+  margin: 10px 0 10px 0;
+  width: 100%;
+}
+
+@media screen and (min-width: 1024px) {
+  .functionning__btn {
+    padding: 0 40px 0 80px;
+  }
+}
+
+.btn-3 {
+  background-color: #eee0ea;
+}
+
+.functionning__btn:hover {
+  background-color: #eee0ea;
+}
+
+img {
+  max-height: 170px;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 18px 18px 0 0;
 }
 
 input {
@@ -71,10 +115,160 @@ input {
   padding-right: 185px;
 }
 
+/* Functionning List */
+.functionning__list {
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  list-style: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .functionning__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-column-gap: 80px;
+            column-gap: 80px;
+  }
+}
+
+.functionning__step {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  width: 25px;
+  height: 25px;
+  border-radius: 90px;
+  background: #9356dc;
+  color: #ffffff;
+  position: relative;
+  margin: -10px;
+}
+
+.functionning__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: grey;
+}
+
+.functionning i {
+  position: absolute;
+  margin-left: 30px;
+  font-size: 21px;
+}
+
+@media screen and (min-width: 1024px) {
+  .functionning i {
+    padding-left: 10px;
+  }
+}
+
+i.fas.fa-store {
+  color: #9356DC;
+}
+
+/* Restaurants List */
+.restaurants__list {
+  list-style: none;
+  margin: 0 20px 20px 20px;
+  padding: 0;
+}
+
+.restaurants__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: white;
+  border-radius: 18px;
+  -webkit-box-shadow: 0px px 3px 0px #0000002e;
+          box-shadow: 0px px 3px 0px #0000002e;
+  cursor: pointer;
+  margin-bottom: 37px;
+  font-size: 14px;
+}
+
+.restaurants {
+  color: black;
+  padding: 15px 0 20px 15px;
+}
+
+.restaurants__name {
+  padding-bottom: 8px;
+  font-weight: bold;
+}
+
 .search__restaurant {
   text-align: center;
   padding: 45px 20px 60px 20px;
   background-color: #F2F2F2;
+}
+
+.functionning {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 40px 20px 40px 30px;
+}
+
+@media screen and (min-width: 1024px) {
+  .functionning {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-column-gap: 1000px;
+            column-gap: 1000px;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
+.cards-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #F2F2F2;
+  padding-top: 40px;
 }
 
 /* Ordre d'import
