--- a/P3_Patrouillault_eric/sass/style.scss
+++ b/P3_Patrouillault_eric/sass/style.scss
@@ -1,12 +1,14 @@
 @import "./base/base";
 @import "./base/typography";
 
+@import "./utils/functions";
+@import "./utils/mixins";
 @import "./utils/variables";
+
 
 @import "./layout/header";
 
 @import "./components/btn";
-@import "./components/img";
 @import "./components/input";
 @import "./components/list";
 
