--- a/P3_Patrouillault_eric/sass/utils/_variables.scss
+++ b/P3_Patrouillault_eric/sass/utils/_variables.scss
@@ -3,7 +3,8 @@ $colour-secondary: #FF79DA;
 $colour-tertiary: #99E2D0;
 $colour-quaternary: #EAEAEA;
 $colour-quinary: #F2F2F2;
-/*senary-septenary*/
+$colour-senary:#eee0ea ;
+/*septenary*/
 
 
 
