--- a/P3_Patrouillault_eric/sass/pages/_index.scss
+++ b/P3_Patrouillault_eric/sass/pages/_index.scss
@@ -1,6 +1,8 @@
 .search__restaurant {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    padding: 45px 20px 60px 20px;
+    padding: 45px 35px 60px 35px;
     background-color: $colour-quinary;
 }
 
@@ -8,7 +10,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 40px 20px 40px 30px;
+    margin: 40px 25px 40px 25px;
     @media screen and (min-width:1024px) {
         flex-wrap: wrap;
         flex-direction: row;
@@ -20,11 +22,11 @@
 .restaurants__title {
     margin-left: 20px;
     @media screen and (min-width:1024px) {
-       margin-left: 31px;
+       margin-left: 0;
+       display: flex;
+       justify-content: center;
     }
 }
-
-
 
 .cards-container {
     display: flex;
@@ -33,3 +35,4 @@
     background-color: $colour-quinary;
     padding-top: 40px;
 }
+
