--- a/P3_Patrouillault_eric/sass/style.scss
+++ b/P3_Patrouillault_eric/sass/style.scss
@@ -7,10 +7,12 @@
 
 
 @import "./layout/header";
+@import "./layout/footer";
 
 @import "./components/btn";
 @import "./components/input";
 @import "./components/list";
+@import "./components/loading-spinner";
 
 @import "./pages/index";
 
