--- a/P3_Patrouillault_eric/sass/base/_typography.scss
+++ b/P3_Patrouillault_eric/sass/base/_typography.scss
@@ -6,6 +6,7 @@ $font-family-cursive: 'Shrikhand-Regular';
    //    without disabling user zoom.
 p, button {
 	font-family: $font-family-sans-serif;
+	font-size: 16px;
 }
 
 h1, h2, h3, h4 {
@@ -13,15 +14,17 @@ h1, h2, h3, h4 {
 }
 
 h1 {
-	font-size: 24px;
+	font-size: 25px;
 	margin-bottom: 20px;
 }
 
 h2 {
-	font-size: 22px;
+	font-size: 23px;
 	margin-bottom: 20px;
 }
 
-h3 {
-	font-size:19px;
-}
+@media screen and (min-width:1024px) {
+	h1 {font-size: 32px;}
+	h2 {font-size: 30px;}
+	p, button {font-size: 20px;}
+ }
