--- a/P3_Patrouillault_eric/sass/components/_btn.scss
+++ b/P3_Patrouillault_eric/sass/components/_btn.scss
@@ -3,7 +3,7 @@
     background: linear-gradient( $colour-secondary, $colour-primary);
     border-radius: 100px;
     height:50px;
-    margin: 30px 0 0 0;
+    margin: 30px 40px 0 40px;
     padding: 12px 24px;
     color: #fff;
     cursor: pointer;
@@ -14,6 +14,9 @@
 
 .functionning__btn {
     @include btn;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: $colour-quinary;
     border-radius: 20px;
     height: 75px;
