animation card in progress

--- a/P3_Patrouillault_eric/sass/components/_btn.scss
+++ b/P3_Patrouillault_eric/sass/components/_btn.scss
@@ -1,3 +1,4 @@
+/* search restaurant */
 .search__btn {
     @include btn;
     background: linear-gradient( $colour-secondary, $colour-primary);
@@ -12,6 +13,7 @@
     }
 }
 
+/* step functionning */
 .functionning__btn {
     @include btn;
     display: flex;
