--- a/P3_Patrouillault_eric/sass/utils/_variables.scss
+++ b/P3_Patrouillault_eric/sass/utils/_variables.scss
@@ -4,7 +4,7 @@ $colour-tertiary: #99E2D0;
 $colour-quaternary: #EAEAEA;
 $colour-quinary: #F2F2F2;
 $colour-senary:#eee0ea ;
-/*septenary*/
+$colour-septenary:white;
 
 
 
