--- a/P3_Patrouillault_eric/sass/base/_typography.scss
+++ b/P3_Patrouillault_eric/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 $font-family-sans-serif: 'Roboto-Medium', sans-serif;
-$font-family-cursive: 'Shrikhand-Regular';
+$font-family-cursive: 'Shrikhand', cursive;
 
  
  // 1. Prevent iOS and IE text size adjust after device orientation change,
@@ -11,6 +11,7 @@ p, button {
 
 h1, h2, h3, h4 {
 	font-family: $font-family-cursive;
+	font-weight: 400;
 }
 
 h1 {
@@ -21,6 +22,10 @@ h1 {
 h2 {
 	font-size: 23px;
 	margin-bottom: 20px;
+}
+
+h3 {
+	font-size: 19px;
 }
 
 @media screen and (min-width:1024px) {
