--- a/P3_Patrouillault_eric/sass/components/_list.scss
+++ b/P3_Patrouillault_eric/sass/components/_list.scss
@@ -111,13 +111,7 @@
                 font-size: 26px;
                 padding: 10px 0 0 275px;
                 color: grey;
-                &:hover::before {
-                    content: "\f004";
-                    font-weight: bold;
-                    background: -webkit-gradient(linear, left top, left bottom, from($colour-primary), to($colour-secondary));
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                }
+                @include heart;
                 @media screen and (min-width:781px) {
                     position: unset;
                     padding: 10px 0 0 30px;
