--- a/P3_Patrouillault_eric/sass/style.scss
+++ b/P3_Patrouillault_eric/sass/style.scss
@@ -1,10 +1,8 @@
 @import "./base/base";
 @import "./base/typography";
 
-@import "./utils/functions";
 @import "./utils/mixins";
 @import "./utils/variables";
-
 
 @import "./layout/header";
 @import "./layout/footer";
@@ -15,7 +13,7 @@
 @import "./components/loading-spinner";
 
 @import "./pages/index";
-
+@import "./pages/menu-1"
 
 
 
