--- a/P3_Patrouillault_eric/sass/utils/_mixins.scss
+++ b/P3_Patrouillault_eric/sass/utils/_mixins.scss
@@ -1,4 +1,27 @@
+/* page index */
 @mixin btn {
     border: 0;
     box-shadow: .25rem .25rem 10px rgba(0,0,0,.25);
 }
+
+@mixin heart {
+    &:hover::before {
+        content: "\f004";
+        font-weight: bold;
+        background: -webkit-gradient(linear, left top, left bottom, from($colour-primary), to($colour-secondary));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+}
+/* page menu- */
+@mixin card {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    background-color: $colour-septenary;
+    border-radius: 15px;
+    font-family: $font-family-sans-serif;
+    cursor: pointer;
+}
+
+
